css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  background-color: #add9b0;
}

*, *::before, *::after {
  box-sizing: inherit;
}

/*-----------------------------------------------------MAIN CONTENT---------------------------------------------------*/

body {
  background-color: #f7faee;
  margin: 0;
}

.info-1 {
  background-color: #add9b0;
}

.protein-2 {
  padding-left: 27%;
}

.grass {
  width: 100%;
  overflow: hidden;
}

.grass svg {
  overflow: visible;
}

.iron, .carbon {
  background-color: #f7faee;
}

svg {
  display: block;
  width: 100%;
  height: 100%;
}

footer {
  background-color: #add9b0;
}

/*-----------------------------------------------------KID ANIMATIONS----------------------------------------------------------------------------------------*/

#hey-bubble {
  transition: all 1.5s ease-in;
}

.kids {
  animation: kids-wiggle-keyframes 3s infinite ease;
  transform-origin: 56px 148px;
}

@keyframes kids-wiggle-keyframes {

  0% {
    transform: translate(40%, 0) scale(1.5, 1.5);
  }

  25% {
    transform: translate(40%, 60%) scale(1.5, 1.5);
  }

  50% {
    transform: translate(40%, 0) scale(1.5, 1.5);
  }

  75% {
    transform: translate(40%, 60%) scale(1.5, 1.5);
  }

  100% {
    transform: translate(40%, 0) scale(1.5, 1.5);
  }
}

.kids-animate, .protein-bubble-animate {
  transition: all 1.5s ease-in;
}

.protein-bubble-scale {
  transform: translate(100px, 50px) scale(0.5, 0.5);
  opacity: 0;
}

.circle-food {
  transition: all 0.5s ease-in;
  transition-delay: 1.25s;
}

.circle-hide {
  opacity: 0;
}

/*-----------------------------------------------------BEAN ANIMATIONS--------------------------------------------------------------------------------*/

.bean {
  transition: all 1s linear;
}

#soybeans {
  transform: translate(0, 0);
  transition: all 1s linear;
}

.bean-wiggle {
  animation: bean-wiggle-keyframes 1s infinite linear;
}

@keyframes bean-wiggle-keyframes {

  0% {
    transform: translate(160px, -50px);
  }

  50% {
    transform: translate(160px, -80px);
  }

  100% {
    transform: translate(160px, -50px);
  }
}

.kidney-position {
  transform: translate(60px, -93px);
}

.swiss-position {
  transform: translate(10px, 10px);
}

.lima-position {
  transform: translate(10px, 10px);
}

.chick-position {
  transform: translate(10px, 10px);
}

.lentil-position {
  transform: translate(-140px, -60px);
}

.kidney-label {
  opacity: 1;
  transition: all 1s linear;
  transition-delay: 1s;
}

.swiss-label {
  opacity: 1;
  transition: all 1s linear;
  transition-delay: 1s;
}

.lima-label {
  opacity: 1;
  transition: all 1s linear;
  transition-delay: 1s;
}

.chick-label {
  opacity: 1;
  transition: all 1s linear;
  transition-delay: 1s;
}

.soy-label {
  opacity: 1;
  transition: all 1s linear;
  transition-delay: 1s;
}

.lentil-label {
  opacity: 1;
  transition: all 1s linear;
  transition-delay: 1s;
}

.bean-label-hide {
  opacity: 0;
}

.show-transition {
  opacity: 1;
  transition: all 1s linear;
}

#iron-man {
  transform: rotate(0);
}

.iron-man-animate {
  animation: iron-man-keyframes 1s infinite linear;
  transform-origin: 377px 120px;
}

@keyframes iron-man-keyframes {

  0% {
    transform: rotate(0);
  }

  25% {
    transform: rotate(15deg);
  }

  50% {
    transform: rotate(0);
  }

  75% {
    transform: rotate(-15deg);
  }

  100% {
    transform: rotate(0);
  }
}

/*-----------------------------------------------------FOOTPRINT ANIMATIONS------------------------------------------------------------*/

#low-meat-eaters, #heavy-meat, #vegans, #vegetarians, #pescetarian, #medium-meat-eaters {
  opacity: 0;
  transition: all 1s ease-in;
  transition-delay: 5s;
}

.title-fade {
  opacity: 1;
}

#low-meat-line path, #heavy-meat-path path, #vegan-line path, #vegetarian-line path, #pescetarian-line path, #medium-meat-line path {
  stroke-dasharray: 0, 400;
}

.line-animation path {
  stroke-dasharray: 0, 400;
}

.line-animation-add {
  animation: line-drawing 5s ease-in;
  transition-delay: 1s;
}

@keyframes line-drawing {
  0% {
    stroke-dasharray: 0, 400;
  }

  100% {
    stroke-dasharray: 400, 400;
  }
}

/*-----------------------------------------------------MEDIA QUERIES-----------------------------------------------------------------------*/

@media only screen and (min-width: 60em) {

  .protein-2 {
    max-width: 36.7%;
    padding-top: 1.6em;
    padding-left: 0;
  }

  .top {
    padding-left: 7em;
  }

  .iron {
    padding-left: 10%;
  }

  .carbon {
    padding-right: 10%;
  }

  .kids {
    animation: kids-wiggle-keyframes-60 2s infinite linear;
    transform-origin: 57px 142px;
  }

  @keyframes kids-wiggle-keyframes-60 {

    0% {
      transform: translate(80%, -10%) scale(1.5, 1.5) rotate(0);
    }

    10% {
      transform: translate(80%, -10%) scale(1.5, 1.5) rotate(0);
    }

    25% {
      transform: translate(80%, -30%) scale(1.5, 1.5) rotate(0);
    }

    50% {
      transform: translate(80%, -10%) scale(1.5, 1.5) rotate(0);
    }

    75% {
      transform: translate(80%, -30%) scale(1.5, 1.5) rotate(0);
    }

    100% {
      transform: translate(80%, -10%) scale(1.5, 1.5) rotate(0);
    }
  }

}

/*#low-meat-eaters
#low-meat-line

#heavy-meat
#heavy-meat-path

#vegans
#vegan-line

#vegetarians
#vegetarian-line

#pescetarian
#pescetarian-line

#medium-meat-eaters
#medium-meat-line*/

